--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   },
   "dependencies": {
     "homey-log": "^2.1.0",
-    "homey-oauth2app": "^3.5.7",
-    "node-fetch": "^2.7.0"
+    "homey-oauth2app": "^3.5.7"
   },
   "devDependencies": {
     "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.5",
     "eslint-config-athom": "^3.1.3"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
