--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "de.fyta",
+  "name": "homey-fyta",
   "version": "1.0.1",
-  "homepage": "https://github.com/edwinvdpol/de.fyta#readme",
+  "homepage": "https://github.com/edwinvdpol/homey-fyta#readme",
   "license": "SEE LICENSE",
   "author": {
     "name": "Edwin van de Pol",
@@ -16,7 +16,7 @@
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/edwinvdpol/de.fyta.git"
+    "url": "https://github.com/edwinvdpol/homey-fyta.git"
   },
   "scripts": {
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore ."
