--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -21,20 +21,28 @@
     "en": [
       "fyta",
       "plant",
+      "plants",
       "care",
       "nurture",
       "voice",
+      "smart",
       "beam",
-      "hub"
+      "beams",
+      "hub",
+      "sensor"
     ],
     "nl": [
       "fyta",
       "plant",
+      "planten",
       "verzorgen",
       "verzorging",
       "stem",
+      "slim",
       "beam",
-      "hub"
+      "beams",
+      "hub",
+      "sensor"
     ]
   },
   "images": {
@@ -67,5 +75,5 @@
   },
   "homeyCommunityTopicId": 107367,
   "homepage": "https://fyta.de",
-  "support": "mailto:developer@edwinvandepol.nl"
+  "support": "mailto:hello@fyta.de"
 }
